@@ -1,3 +1,12 @@
+2010-11-09  Brady Eidson  <beidson@apple.com>
+
+        Reviewed by the ever-picky Windows build-bot.
+
+        Windows build bot was complaining about this.
+
+        * Shared/WebContextMenuItemData.cpp:
+        (WebKit::WebContextMenuItemData::core):
+
 2010-11-09  Anders Carlsson  <andersca@apple.com>
 
         Reviewed by John Sullivan.
